--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^7.0.1",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.8.4",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
